refactor: metodo transferir implementada fora do cliente